[gd_scene load_steps=3 format=3 uid="uid://c8kqfxw5gvwqj"]

[ext_resource type="Script" path="res://scripts/ui/console_panel.gd" id="1_yvj4r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ConsolePanel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 100
mouse_filter = 0
script = ExtResource("1_yvj4r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "游戏控制台"
horizontal_alignment = 1

[node name="OutputPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/OutputPanel"]
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputLabel" type="Label" parent="VBoxContainer/InputContainer"]
layout_mode = 2
text = ">"

[node name="InputField" type="LineEdit" parent="VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
placeholder_text = "输入命令..."
focus_mode = 2
context_menu_enabled = true
caret_blink = true
select_all_on_focus = false
mouse_default_cursor_shape = 1

[node name="ExecuteButton" type="Button" parent="VBoxContainer/InputContainer"]
layout_mode = 2
text = "执行"

[node name="ToggleButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 30.0
grow_horizontal = 0
text = "×"

[connection signal="pressed" from="VBoxContainer/InputContainer/ExecuteButton" to="." method="_on_execute_button_pressed"]
